# Events_Organizer_Helper

./: .gitignore  README.md  catering_graph.json  catering_knowledge.json  cspell.json  decor_graph.json  decor_patterns.json  enrich_existing_data.py  experiment_2_bdi_effectiveness.py  experiment_3_rag_precision.py  experiment_5_system_performance.py  experiment_6_integration_effectiveness.py  experimental_framework.py  main.py  main_result.txt  pyproject.toml  requirements.txt  requirements_experiments.txt  run_all_experiments.py  system_analysis.py  test_analysis.json  test_bdi_system.py  test_corrections.py  test_dynamic_enrichment.py  test_enrichment_fixes.py  test_enrichment_sequence.py  test_enrichment_simple.py  test_memory_system.py  user_pref_memory.json  venue_graph.json
Agents/: BudgetAgent.py  Planneragent.py  beliefs_schema.py  catering_graph.json  catering_manager.py  catering_rag.py  decor_graph.json  decor_knowledge.json  decor_manager.py  decor_rag.py  planner_rag.py  session_memory.py  test.py  test1.py  test_catering_rag.py  test_decor_agent.py  test_decor_rag.py  test_planner_rag.py  test_sessions.json  test_system.py  venue_manager.py  venue_rag.py  venues_graph.json
Crawler/: __init__.py  core.py  enrichment_engine.py  expert.py  graph.py  llm_extract_openrouter.py  manager.py  monitoring.py  policy.py  quality_validator.py  scrapper.py  test.py
Informe/: event_organizer_helper_report.tex
experiment_results/: Integration_Effectiveness_Complete_20250618_035505_report.html  Integration_Effectiveness_Complete_20250618_041434_report.html  (+3 more)
(+114 files in other folders)
