[project]
name = "joint-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "gensim>=4.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "spacy>=3.8.5",
    "sympy>=1.14.0",
]
