[project]
name = "joint-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "gensim>=4.3.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
    "notebook>=6.4.0",
    "numpy>=1.21.0",
    "openai>=1.82.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "psutil>=5.8.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "selenium>=4.33.0",
    "selenium-stealth>=1.0.6",
    "spacy>=3.8.5",
    "statsmodels>=0.13.0",
    "streamlit>=1.45.1",
    "sympy>=1.14.0",
    "webdriver-manager>=4.0.2",
]
